force-app/main/default/objects/Application_Log__c/fields/Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope__c</fullName>
    <label>Job Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>