force-app/main/default/objects/Application_Log__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>TextArea</type>
</CustomField>